# NeolyxOS

./: .gitignore  Architecture.md  BootRuntime.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SUPPORT.md  boot_test.sh  build.sh  build_all.sh  mime.types  neolyx_instructions.md  note.ai  project_tree.html  rebuild_image.sh  startup.nsh  todo.md  tree.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
AI-SUMMERY/: BUG_ANALYSIS.md  FIX_DESKTOP_CRASH.md  FIX_SUMMARY.md
REOX/docs/: REOX_LANGUAGE.md
boot/: BOOTX64.EFI  Makefile  Makefile_simple  README.md  boot.c  boot_menu.c  boot_menu.h  config.c  efilib.c  elf.h  graphics.c  graphics.h  linker.ld  logo.h  main.c  main_simple.c  nxfs.c  test.c  test_compile.bat
config/: SysLib.md  boot.nlc  host.nlc  locale.nlc  neolyx_extensions.yaml  nx_config.c  nx_config.h  permissions.nlc  quick_reference.md  system.nlc  theme.nlc  user_defaults.nlc
desktop/: DEVELOPMENT.md  Makefile  README.md  desktop.elf  desktop_elf.h  desktop_elf_data.h  desktop_elf_formatted.h  elf_tmp.h  ring0_desktop.c  user.ld  userspace_desktop.c
desktop/apps/icon-converter/: Cargo.toml  README.md
desktop/apps/icon-converter/assets/sample_icons/: terminal.nix
desktop/apps/icon-converter/src/: converter.rs  lib.rs  main.rs
desktop/apps/icon-converter/src/formats/: gif_format.rs  jpeg_format.rs  nix_format.rs  png_format.rs  svg_format.rs
desktop/apps/reolab.app/: .gitignore  BUILD_STATUS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.bat  build.sh  main.c  manifest.npa
desktop/apps/reolab.app/config/: reolab.toml
desktop/apps/reolab.app/config/themes/: material-dark.json
desktop/apps/reolab.app/docs/: INSTALLATION.md  reox_language.md  reox_language_specification.md
desktop/apps/reolab.app/examples/: hello_c.c  hello_reox.reox
desktop/apps/reolab.app/include/: reolab.h
desktop/apps/reolab.app/src/: lib.rs  main.rs
desktop/apps/reolab.app/src/app/: app.c  app.h
desktop/apps/reolab.app/src/cli/: main.rs  mod.rs
desktop/apps/reolab.app/src/config/: mod.rs
desktop/apps/reolab.app/src/core/: hardware_scan.rs  mod.rs  system_api.rs  templates.rs  vm_manager.rs  vm_profile.rs
desktop/apps/reolab.app/src/core/compiler/: ast.rs  error.rs  lexer.rs  mod.rs
desktop/apps/reolab.app/src/drivers/: audio_passthrough.rs  gpu_passthrough.rs  mod.rs  usb_passthrough.rs
desktop/apps/reolab.app/src/editor/: buffer.c  buffer.h  cursor.c  cursor.h
desktop/apps/reolab.app/src/extensions/: mod.rs
desktop/apps/reolab.app/src/graphics/: graphics.h  graphics_nxrender.c  graphics_sdl.c
desktop/apps/reolab.app/src/gui/: ide.rs  mod.rs
desktop/apps/reolab.app/src/languages/: c.rs  cpp.rs  mod.rs  perl.rs  reox.rs  rust.rs
desktop/apps/reolab.app/src/storage/: mod.rs  vm_storage.rs
desktop/apps/reolab.app/src/theme/: theme.c  theme.h
desktop/apps/reolab.app/src/ui/: ui.c  ui.h
desktop/apps/reolab.app/src/virtualization/: firecracker_wrapper.rs  mod.rs  qemu_wrapper.rs
desktop/apps/reolab.app/src/virtualization/neovirt/: mod.rs
desktop/apps/reolab.app/ui/: editor_view.reox  main_window.reox
docs/: boot_roadmap.html  index.html  index.html.bak  nix_format.html  phases.html  project_status.html
gui/: README.md  debug.md
icons/: README.md  cursor.html
include/: nxcolor.h  nxkeyboard_layout.h  nxnetwork.h  nxtheme.h  stddef.h  stdint.h  string.h
initramfs/: init
kernel/: .ninja_log  Makefile  Makefile.minimal  Makefile.platform  Makefile.prod  README.md  boot_firmware.c  browser_session.c  browser_session.h  build.ninja  kernel.elf  kernel_main.c  link.ld  linker.ld  project_tree.html  uefi_bootloader.c  video_minimal.c
kernel/src/security/: app_sandbox.c  audit.c  code_integrity.c  crypto.c  csr.c  firewall.c  ids.c  meson.build  security_policy.c  security_scanner.c  system_lock.c  task_port_protection.c
pkg/: README.md
report/: desktop_investigation_report.html
resources/: README.md
scripts/: convert_icons.py  create_image.sh  neo-updater.sh  update_nav.py
services/: README.md  health_monitor.c  health_monitor.h
services/nxaudio-server/: CMakeLists.txt  nxaudio_server.c  nxaudio_server.h  nxaudiod.service.in
tests/: README.md  kernel_tests.c  run_tests.sh
tools/: README.md  gen_logo  generate_cursors.py  generate_logo.c  generate_nxib_icons.py
(+1134 files in other folders)
