[package]
name = "icon-converter"
version = "0.1.0"
edition = "2021"
authors = ["KetiveeAI <dev@ketivee.ai>"]
description = "Convert images to Neolyx .nix icon format"
license = "KetiveeAI"
repository = "https://github.com/ketivee/neolyx-os"

[dependencies]
# Image processing
image = "0.24"
png = "0.17"
jpeg-decoder = "0.3"
gif = "0.12"
webp = "0.2"
svg = "0.13"
resvg = "0.28"

# File handling
walkdir = "2.4"
glob = "0.3"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress reporting
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 