[package]
name = "reolab"
version = "0.1.0"
edition = "2021"
authors = ["KetiveeAI <dev@ketivee.ai>"]
description = "Neolyx OS Multi-Language IDE & ReoX Compiler"
license = "KetiveeAI"
repository = "https://github.com/ketivee/neolyx-os"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

# GUI dependencies (Rust-based GUI)
eframe = "0.24"  # egui framework
egui = "0.24"
egui_extras = "0.24"
rfd = "0.12"  # File dialogs

# Language processing
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-objc = "0.20"
regex = "1.0"
syntect = "5.0"  # Syntax highlighting

# AI Integration
reqwest = { version = "0.11", features = ["json"] }
openai = "0.20"  # OpenAI API integration

# File system and project management
walkdir = "2.3"
notify = "6.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Compilation and execution
tempfile = "3.0"
which = "5.0"

# System integration
sysinfo = "0.29"
nix = "0.26"
libc = "0.2"
num_cpus = "1.0"

# Binary format handling
goblin = "0.8"  # ELF/PE/Mach-O parsing
object = "0.32"  # Object file manipulation

# Process management
std::process = "1.0"

# Configuration
dirs = "5.0"

# Virtualization
qemu = "0.1"  # QEMU wrapper
virtio = "0.1"  # VirtIO support

# Network and I/O
pnet = "0.33"
usb = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[bin]]
name = "reolab-ide"
path = "src/main.rs"

[[bin]]
name = "reolabctl"
path = "src/cli/main.rs"

[[bin]]
name = "reoxc"
path = "src/compiler/main.rs"

[features]
default = ["gui-egui"]
gui-egui = ["eframe", "egui", "egui_extras"]
cli-only = []
ai-integration = ["openai", "reqwest"]
c-support = []
cpp-support = []
objc-support = []
reox-support = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 