#############################################################
# Security Subsystem Build Configuration
#############################################################

# Define security sources directly in this list for inclusion in main build
security_sources = files(
    'firewall.c',
    'app_sandbox.c',
    'system_lock.c',
    'crypto.c',
    'audit.c'
)
